# otus-cpp-basic

./: .gitignore  README.TXT  git_cheatsheet.md
02-Hello-world(HW)/: CMakeLists.txt  example.cpp  example.h  readme.md
HW03-Guess-the-number/: CMakeLists.txt  check_value.cpp  check_value.h  guess_the_number.cpp  high_score.txt  menu.cpp  menu.h  random_value.cpp  readme.md  record_table.cpp  record_table.h  record_table.txt  systemfunc.cpp  systemfunc.h
HW04-Physics/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Dust.hpp  Physics.cpp  Physics.hpp  Point.hpp  World.cpp  World.hpp
HW04-Physics/black_box/: Application.cpp
HW04-Physics/data/: test.txt
HW05-Calc-statistics-with-Polymorphism/: CMakeLists.txt  statistics.cpp
HW06-Templates-Container/: CMakeLists.txt  containers.cpp  mysinglylinkedlist.hpp  mysinglylinkedlist.inl  myvector.hpp  myvector.inl
HW07-Counter-and-PushBack-problem/: CMakeLists.txt
HW07-Counter-and-PushBack-problem/gtests/: CMakeLists.txt  gtests.cpp
HW07-Counter-and-PushBack-problem/src/: myvector.hpp
HW07-Unit-test/: CMakeLists.txt  main.cpp  vector_tests.cpp  vector_tests.h
HW07-Unit-test/ctests/: CMakeLists.txt  vector_test_access_by_index.cpp  vector_test_assignment_operator.cpp  vector_test_copy_ctor.cpp  vector_test_ctor.cpp  vector_test_ctor_default.cpp  vector_test_erase_back.cpp  vector_test_erase_front.cpp  vector_test_erase_middle.cpp  vector_test_insert_front.cpp  vector_test_insert_middle.cpp  vector_test_iterator.cpp  vector_test_move_ctor.cpp  vector_test_pop_back.cpp  vector_test_push_back.cpp  vector_test_size.cpp
HW07-Unit-test/gtests/: CMakeLists.txt  aux-for-list.h  aux-for-vector.h  list_gtests.cpp  vector_gtests.cpp
HW07-Unit-test/src/: mydoublylinkedlist.hpp  mydoublylinkedlist.inl  mysinglylinkedlist.inl  myvector.hpp  myvector.inl
HW08-Threads/: CMakeLists.txt  statistics.txt  topk_words_mythread.cpp
PRO_basic/: CMakeLists.txt  CRC.cpp  CRC.h  UART_tools.h  logging_UART_util.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialworker.cpp  serialworker.h
